fix z-index in post profile

--- a/src/assets/styles/components/post.scss
+++ b/src/assets/styles/components/post.scss
@@ -43,6 +43,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    z-index: 3;
 
     img {
       width: 50px;
@@ -63,7 +64,7 @@
       top: 0;
       width: 2px;
       height: calc(100% + 10px);
-      z-index: 10;
+      z-index: 2;
       margin-top: $margin-v;
     }
   }
